2007-09-02  Stefan Jahn  <stefan@lkcc.org>

	* scan_netlist.l: Allowing engineering notation of numbers in
	equations.

2007-08-23  Stefan Jahn  <stefan@lkcc.org>

	* parasweep.cpp: Implemented new initialize() and cleanup()
	callbacks.  This fixes a bug occurring for nested sweeps where the
	sweep variable of an inner-loop sweep is used in an equation.

	* net.cpp: Run new initialize() and cleanup() functionality of
	analyses.

2007-08-15  Stefan Jahn  <stefan@lkcc.org>

	* dataset.cpp: New function to load CSV files added.

	* check_csv.cpp, scan_csv.l, parse_csv.y: Implemented lexer,
	parser and checker for CSV files.

	* matrix.cpp: Documented missing 1/2 factor in some matrix
	conversions.

2007-06-17  Stefan Jahn  <stefan@lkcc.org>

	* parse_netlist.y: Re-allow range specifications as function
	arguments.  It disappreared while implementing the ?: operator.

2007-06-15  Stefan Jahn  <stefan@lkcc.org>

	* variable.cpp: New type of variables: stored result values.

	* history.cpp: Fixed bug occurring when time value vector is
	shorter than the value vector.

	* environment.cpp: New function for saving local variable resutls
	in the environment.  Not yet used...

2007-05-27  Stefan Jahn  <stefan@lkcc.org>

	* input.cpp: Transfer references to equation variables in an
	analysis property properly into its properties.

	* equation.cpp: References to component properties can now also be
	found in analysis definitions.

	* check_netlist.cpp: Allow certain analysis properties to be
	variable references.

2007-05-24  Stefan Jahn  <stefan@lkcc.org>

	* equation.cpp: Added elementary charge "q" to the constants in
	the equation solver.

	* differentiate.cpp: Added differentiator for the new vt()
	function.

	* evaluate.cpp: Added function vt() computing the thermal voltage.

	* check_netlist.cpp: Moved subroutine call for checking actions
	behind the subcircuit checks in order to allow detecting
	non-linearities in subcircuits.

2007-05-17  Stefan Jahn  <stefan@lkcc.org>